# accelerate-typelits

./: .travis.yml  ChangeLog.md  LICENSE  Readme.md  accelerate-typelits.cabal  stack-7.10.3.yaml  stack-7.10.yaml  stack-8.2.2.yaml  stack.yaml
bench/: Bench.hs
bench/Data/Accelerate/TypeLits/: Random.hs
bench/Data/Array/Accelerate/: TypeLits.hs
example/: Main.hs
src/Data/Accelerate/: TypeLits.hs
src/Data/Accelerate/TypeLits/: Random.hs
src/Data/Array/Accelerate/: TypeLits.hs
src/Data/Array/Accelerate/TypeLits/: Internal.hs  Random.hs
src/Data/Array/Accelerate/TypeLits/System/Random/: MWC.hs
test/: Test.hs
test/Test/Data/Accelerate/: TypeLits.hs
test/Test/Data/Accelerate/TypeLits/: Random.hs
test/Test/Data/Array/Accelerate/: TypeLits.hs
test/Test/Data/Array/Accelerate/TypeLits/: Internal.hs  Random.hs
test/Test/Data/Array/Accelerate/TypeLits/System/Random/: MWC.hs
