---------------------------------------------------------------------------------
--                    --    ---------------------------    --                  --
--                   --    ---  Accelerate TypeLits  ---    --                 --
--                    --    ---------------------------    --                  --
---------------------------------------------------------------------------------

name:                accelerate-typelits
version:             0.1.0.0
synopsis:            a typesafe way encode accelerate matrices and vectors
description:         a small wrapper plus convenience functions on top of
                     accelerate to represent matrices with their dimensions
stability:           experimental
license:             ISC
license-file:        LICENSE
author:              Martin Heuschober
maintainer:          Martin Heuschober <epsilonhalbe [at] gmail [dot] com>
bug-reports:         http://github.com/epsilonhalbe/accelerate-typelit/issues
copyright:           (c) 2016 Martin Heuschober
category:            Math
build-type:          Simple
extra-source-files:  ChangeLog.md
                  ,  Readme.md
                  ,  stack.yaml
cabal-version:       >=1.22
tested-with:         GHC == 7.10.3

source-repository head
  type:     git
  location: git://github.com/epsilonhalbe/accelerate-typelit

---------------------------------------------------------------------------------
--                                   Library                                   --
---------------------------------------------------------------------------------

library
  exposed-modules:     Data.Accelerate.TypeLits
                 ,     Data.Accelerate.TypeLits.Random
  build-depends:       base >=4.8 && <4.9
               ,       accelerate
               ,       accelerate-random
               ,       mwc-random

  hs-source-dirs:      src
  default-language:    Haskell2010

---------------------------------------------------------------------------------
--                                    Tests                                    --
---------------------------------------------------------------------------------

test-suite tests
  type:                exitcode-stdio-1.0
  main-is:             Test.hs
  --exposed-modules:
  other-modules:       Test.Data.Accelerate.TypeLits
               ,       Test.Data.Accelerate.TypeLits.Random
  build-depends:       base >=4.8 && <4.9
               ,       accelerate-typelits
               ,       tasty
               ,       tasty-hunit
               ,       tasty-smallcheck
               ,       tasty-quickcheck
               ,       accelerate
               ,       accelerate-random
               ,       mwc-random

  hs-source-dirs:      src, test
  default-language:    Haskell2010

---------------------------------------------------------------------------------
--                                 Benchmarks                                  --
---------------------------------------------------------------------------------

test-suite benchmarks
  type:                exitcode-stdio-1.0
  main-is:             Bench.hs
  --exposed-modules:
  --other-modules:
  build-depends:       base >=4.8 && <4.9
               ,       accelerate-typelits
               ,       criterion

  hs-source-dirs:      src, bench
  default-language:    Haskell2010
